fix mouse events in area where tasks list overlaps the map

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -12,18 +12,21 @@
   margin-top: 10px;
   margin-left: 35px;
   overflow-y: auto;
-  height: 100%
+  height: 100%;
+  pointer-events: none;
 }
 
 .TasksList-Task {
   width: 350px;
   margin-top: 10px;
   padding: 14px 23px 14px 20px;
+  pointer-events: auto;
 }
 
 .TasksList-NewTask-button {
   height: 50px;
   padding: 0;
+  pointer-events: auto;
 }
 
 .TasksList-NewTask-content {
